--- a/Quiz-web/pom.xml
+++ b/Quiz-web/pom.xml
@@ -83,6 +83,10 @@
             <artifactId>jquery</artifactId>
             <version>3.3.1-1</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
