--- a/Quiz-web/src/main/resources/application.properties
+++ b/Quiz-web/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 #Template Engine
 spring.mvc.view.prefix=classpath:/templates/
 spring.mvc.view.suffix=.html
+
+spring.datasource.url=jdbc:mysql://localhost:3306/mock_db
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto = update
