--- a/Quiz-web/src/main/resources/application.properties
+++ b/Quiz-web/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.mvc.view.prefix=classpath:/templates/
 spring.mvc.view.suffix=.html
 
 spring.datasource.url=jdbc:mysql://localhost:3306/mock_db
-spring.datasource.username=root
-spring.datasource.password=Ahaha08998
+spring.datasource.username=khoatd
+spring.datasource.password=2032000
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
